--- a/static/style.css
+++ b/static/style.css
@@ -7,6 +7,7 @@
 	color: black;
 	overflow-x: hidden;
 	scroll-behavior: smooth;
+	cursor: default;
 }
 body {
 	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -168,6 +169,11 @@ h4{
 		font-size: 20px;
 		cursor: pointer;
   }
+  #gen-halls-button{
+	width: 80%;
+	border-radius: 5px;
+	margin: 20px 0;
+  }
   .container {
 	display: flex;
 	flex-direction: column;
@@ -178,10 +184,12 @@ h4{
   #halls{
 	text-align: center;
 	color: white;
-	background-color: #1FBABF;
+	background-color: #60D3AA;
 	padding: 10px 0;
   }
-
+#halltitle{
+	margin: 10px 0;
+}
   #halltext{
 	line-height: 2em;
   }
